include $(top_builddir)/commdef.mk

noinst_LIBRARIES=libcli_private.a
lib_LTLIBRARIES=libcli.la

libcli_private_a_SOURCES = \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_init.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_af.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_auth.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_func.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_io.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_main.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_mgr.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_om.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_lib.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_task.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_pars.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_backdoor.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_addrunconfig_task.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api.h \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_tbl.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_1x.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_radius.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_aaa.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_broadcast.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_dhcp.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_show.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_vlan.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_sta.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_file.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_l3.h \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_l3.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_loopback.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_ipv6.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_system.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_http.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_port_channel.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_priority.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_mirror.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_multicast.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_rate_limit.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_time.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_unicast.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_snmp.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_syslog.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_ntp.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_sntp.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_mgmt_ip_filter.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_line.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_lacp.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_lldp.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_ethernet.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_tacacs.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_ssh.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_telnet.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_netaccess.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_runcfg.c \
    $(ACCTONSRC_DIR)/user/apps/cli/oem/$(PROJECT_NAME)/cli_cmd.c \
    $(ACCTONSRC_DIR)/user/apps/cli/oem/$(PROJECT_NAME)/cli_msg.c \
    $(ACCTONSRC_DIR)/user/apps/cli/oem/$(PROJECT_NAME)/cli_arg.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_l4_ds_qosv2.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_acl_qosv2.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_dns.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_smtp.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_vrrp.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_voice_vlan.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_banner.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_banner.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_pvlan_isol.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_pvlan_ms.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_tunnel.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_webauth.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_sflow.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_pppoe_ia.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_debug.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_pfc.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_ets.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_rspan.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_dcbx.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_cn.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_mlag.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_watchdog.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_linux.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_vxlan.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_hash_selection.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_api_mac_vlan.c

libcli_private_a_CPPFLAGS = \
    $(COMMON_CPPFLAGS) \
    -I$(OEM_INCLUDEDIR) \
    -I$(ACCTONSRC_DIR)/sysinclude \
    -I$(ACCTONSRC_DIR)/sysinclude/mibconstants \
    -I$(ACCTONSRC_DIR)/sysinclude/oem/$(PROJECT_NAME) \
    -I$(ACCTONSRC_DIR)/cmnlib/common/include \
    -I$(ACCTONSRC_DIR)/cmnlib/user/include \
    -I$(ACCTONSRC_DIR)/user/apps/cli \
    -I$(ACCTONSRC_DIR)/user/apps/cli/include \
    -I$(ACCTONSRC_DIR)/user/apps/cli/oem/$(PROJECT_NAME) \
    -I$(ACCTONSRC_DIR)/user/apps/backdoor/include \
    -I$(ACCTONSRC_DIR)/user/apps/snmpmgmt/v3/snmp/include \
    -I$(ACCTONSRC_DIR)/user/apps/cwmp/include \
    -I$(ACCTONSRC_DIR)/user/driver/fs/include \
    -I$(ACCTONSRC_DIR)/user/driver/devdrv/include \
    -I$(ACCTONSRC_DIR)/user/driver/swdrv/include \
    -I$(ACCTONSRC_DIR)/user/driver/iscdrv/include \
    -I$(ACCTONSRC_DIR)/user/driver/landrv/include \
    -I$(ACCTONSRC_DIR)/user/driver/leddrv/include \
    -I$(ACCTONSRC_DIR)/user/driver/systime/include \
    -I$(ACCTONSRC_DIR)/user/core/bdpv/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/add/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/aluc \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/dhcp \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/dhcp/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/ipsg/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/dhcpv6/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/dhcpv6 \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/ndsnp/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/ip6sg/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/ucmgmt/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/sysmgmt/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/stkmgmt/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/stkmgmt/stktplg/$(MODEL_NAME) \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/ntp/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/sntp/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/dai/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/smtp/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/ucmgmt/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/syslog/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/telnet/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/http/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/telnet/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/sys_callback/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/trapmgmt/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/mib2mgmt/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/xfer/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/dns/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/sflow/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/cluster/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/debug/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/ledmgmt/include \
    -I$(ACCTONSRC_DIR)/user/core/qos/acl/include \
    -I$(ACCTONSRC_DIR)/user/core/qos_v2/cos/include \
    -I$(ACCTONSRC_DIR)/user/core/qos_v2/include \
    -I$(ACCTONSRC_DIR)/user/core/security/keygen \
    -I$(ACCTONSRC_DIR)/user/core/security/sshv2/include \
    -I$(ACCTONSRC_DIR)/user/core/security/include \
    -I$(ACCTONSRC_DIR)/user/core/security/netaccess \
    -I$(ACCTONSRC_DIR)/user/core/security/webauth/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/vlan/gvrp/garp \
    -I$(ACCTONSRC_DIR)/user/core/l2/vlan/gvrp/garp/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/vlan/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/vlan/privatevlan/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/l2mux/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/bridge/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/cn/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/swctrl/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/swctrl/rspan/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/lbd/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/lldp/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/dcbx/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/pfc/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/mlag/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/ets/include \
    -I$(ACCTONSRC_DIR)/user/core/l2/pppoe_ia/include \
    -I$(ACCTONSRC_DIR)/user/core/cmgr/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/amtrl3/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/iml/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/udphelper/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/netcfg/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/vrrp/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/vrrp \
    -I$(ACCTONSRC_DIR)/user/core/l3/netcfg/ipcfg/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/netcfg/linux_porting/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/netcfg/routecfg/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/netcfg/ndcfg/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/netcfg/ripcfg/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/netcfg/ospfcfg/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/pim/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/ipal/linux/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/netcfg/igmpcfg/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/netcfg/mldcfg/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/netcfg/pbrcfg/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/vxlan/include \
    -I$(ACCTONSRC_DIR)/user/protocol \
    -I$(ACCTONSRC_DIR)/user/core/l3/bgp/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/traceroute/include \
    -I$(ACCTONSRC_DIR)/user/driver/buffermgmt/include \
    -I$(ACCTONSRC_DIR)/user/core/l3/ping/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/smtp/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/mib2mgmt/include \
    -I$(ACCTONSRC_DIR)/user/core/security/portsec \
    -I$(ACCTONSRC_DIR)/user/driver/sysdrv/include \
    -I$(ACCTONSRC_DIR)/user/thirdpty/inih

libcli_la_SOURCES = \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_pom.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_pmgr.c \
    $(ACCTONSRC_DIR)/user/apps/cli/cli_om_exp.c

libcli_la_CPPFLAGS = \
    $(COMMON_CPPFLAGS) \
    -I$(ACCTONSRC_DIR)/user/apps/cli/ \
    -I$(ACCTONSRC_DIR)/user/apps/cli/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/stkmgmt/include \
    -I$(ACCTONSRC_DIR)/user/core/mgmt/dai/include \
    -I$(ACCTONSRC_DIR)/user/driver/devdrv/include \
    -I$(ACCTONSRC_DIR)/user/driver/swdrv/include \
    -I$(ACCTONSRC_DIR)/user/driver/buffermgmt/include

#Temporaily workaround for compiler warning
CFLAGS += -Wno-unused-but-set-variable -Wno-enum-compare -Wno-pragmas -Wno-misleading-indentation

CFLAGS += -Werror -g
